gccida/c0/delete_output_reload
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/delete_output_reload/src/reload1.c:8101:25: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x = (  struct rtx_def *)insn[2]; 
                        ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/delete_output_reload/src/reload1.c:8167:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)reg)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/delete_output_reload/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/delete_output_reload/src/reload1.c:8168:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v17 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)reg)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/delete_output_reload/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/delete_output_reload/src/reload1.c:8187:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( i2 = ( rtx)insn[1]; i2; i2 = ( rtx)i2[1] ) 
                 ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/delete_output_reload/src/reload1.c:8187:42: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( i2 = ( rtx)insn[1]; i2; i2 = ( rtx)i2[1] ) 
                                         ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/delete_output_reload/src/reload1.c:8192:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v13 = ( rtx)i2[2]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/delete_output_reload/src/reload1.c:8212:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( i2a = ( rtx)insn[1]; i2a; i2a = ( rtx)i2a[1] ) 
                  ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/delete_output_reload/src/reload1.c:8212:45: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( i2a = ( rtx)insn[1]; i2a; i2a = ( rtx)i2a[1] ) 
                                            ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/delete_output_reload/src/reload1.c:8217:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v11 = ( rtx)i2a[2]; 
            ^~~~~~
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/delete_output_reload/src/obj/reload1.o] Error 1
